Fix contrast and html default lang
Increase contrast for meta time labels.
Use html lang en as the default.

--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -96,6 +96,10 @@ a:hover {
   text-decoration: none !important;
 }
 
+.meta {
+  color: #acacac;
+}
+
 .header nav,
 .footer {
   border-color: #333;
